schema/testdata/validation_api_models_to_have_query_actions/schema.keel
model Post {
    fields {
        name Text
        blog Blog
    }
}

model Blog {
    fields {
        name Text
    }
}

api Web {
    @graphql
    models {
        Post
    }
}
